[package]
name = "polygon"
version = "0.1.0"
edition = "2021"

[lib]
name = "polygon"
path = "src/lib.rs"

[[bin]]
name = "polygon"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }

[profile.release-lto]
inherits = "release"
lto = true

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "lexer"
harness = false
